[package]
name = "git-searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql_client = "0.13"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.141"

[build-dependencies]
graphql_client = "0.13"

